@startuml API_Layer_Class_Diagram

!theme plain
skinparam classBackgroundColor #FFE5B4
skinparam classBorderColor #333333
skinparam arrowColor #333333

title API Layer — Class Diagram

' ============= FastAPI Application =============
class FastAPIApp {
    {field} title: str
    {field} version: str
    --
    {method} health_check(): HealthResponse
    {method} chat(request: ChatRequest): ChatResponse
    {method} api_info(): ApiInfoResponse
    {method} root(): RootResponse
}

' ============= Services =============
class ChatService {
    {field} rag: IRAGPipeline | None
    {field} llm_client: ILLMClient | None
    --
    {method} extract_user_message(messages) -> str
    {method} search_sources(query, top_k) -> list[dict]
    {method} format_sources(sources) -> str
    {method} generate_response(query, sources, api_key, model, max_tokens) -> tuple
    {method} handle_error(error) -> str
    {method} process_chat(request) -> ChatResponse
}

' ============= Dependencies =============
class DependencyContainer {
    {field} _rag: IRAGPipeline | None
    {field} _llm_client: ILLMClient | None
    {field} _chat_service: IChatService | None
    --
    {method} set_rag(rag)
    {method} set_llm_client(client)
    {method} get_rag() -> IRAGPipeline | None
    {method} get_llm_client() -> ILLMClient | None
    {method} get_chat_service() -> IChatService | None
}

' ============= Interfaces =============
interface IRAGPipeline {
    {method} search(query: str, top_k: int) -> list[dict]
}

interface ILLMClient {
    {method} generate(query, sources, system_prompt, max_tokens, temperature, model) -> str
}

interface IChatService {
    {method} process_chat(request: ChatRequest) -> ChatResponse
}

' ============= Data Transfer Objects =============
class ChatRequest <<dto>> {
    {field} messages: list[dict[str, str]]
    {field} max_tokens: int = 256
    {field} api_key: str | None = None
    {field} remote_model: str
}

class ChatResponse <<dto>> {
    {field} reply: str
    {field} used_remote: bool = False
    {field} remote_error: str | None = None
}

class HealthResponse <<dto>> {
    {field} status: str
    {field} rag_ready: str
    {field} llm_ready: str
}

class ApiInfoResponse <<dto>> {
    {field} name: str
    {field} version: str
    {field} description: str
    {field} endpoints: dict[str, str]
}

class RootResponse <<dto>> {
    {field} message: str
    {field} docs: str
}

' ============= Relationships =============

' FastAPI uses DependencyContainer to resolve dependencies
FastAPIApp --> DependencyContainer

' FastAPI uses DTOs (association)
FastAPIApp --> ChatRequest
FastAPIApp --> ChatResponse
FastAPIApp --> HealthResponse
FastAPIApp --> ApiInfoResponse
FastAPIApp --> RootResponse

' ChatService uses interfaces (dependency)
ChatService ..> IRAGPipeline
ChatService ..> ILLMClient

' ChatService uses DTOs (association)
ChatService --> ChatRequest
ChatService --> ChatResponse

' ChatService realizes IChatService
ChatService ..|> IChatService

' DependencyContainer manages dependencies
DependencyContainer --o IRAGPipeline
DependencyContainer --o ILLMClient
DependencyContainer --o IChatService

@enduml
